--- a/MINI PROJET.html
+++ b/MINI PROJET.html
@@ -32,7 +32,7 @@
 
     def byebye(ev):
       if progression_question > 4:
-        document["question"].html = "NTM"
+        document["question"].html = "Tu as fini le questionnaire"
         del document["bouton1"]
         del document["bouton2"]
         del document["bouton3"]
@@ -64,8 +64,8 @@
         <img src="sheet.png" width="400" height="341" />
       </div>
 
-      <div id="Layer4" style="position:absolute; left:730px; top:520px; width:150px; height:132px; z-index:4">
-      <p id="question">xfg</p>
+      <div id="Layer4" style="position:absolute; left:730px; top:530px; width:150px; height:132px; z-index:4">
+      <p id="question">Es-tu serpentard ?</p>
       </div>
 
       <div id="Layer5" style="position:absolute; left:710px; top:590px; width:150px; height:132px; z-index:4">
