--- a/MINI PROJET.html
+++ b/MINI PROJET.html
@@ -4,7 +4,8 @@
   <head>
 
     <meta charset="UTF-8" />
-    <title>NOTRE CHOIXPEAU</title>
+    <title>choixpeau magique</title>
+    <link rel="icon" href="blason.png" type="image/png">
     <script src="https://cdn.jsdelivr.net/npm/brython@3/brython.min.js">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/brython@3/brython_stdlib.js">
@@ -48,39 +49,54 @@
     </script>
     
     <center>
-      <h1> NOTRE CHOIXPEAU GIQUEMA</h1>
 
-      <div id="Layer1" style="position:absolute; left:600px; top:100px; width:136px; height:132px; z-index:1">
-        <img src="pngegg(1).png" width="400" height="341" />
+      <div id="Layer1" style="position:absolute; left:375px; top:-60px; width:136px; height:132px; z-index:1">
+        <img src="pancarte.png" width="645" height="230" />
       </div>
 
-      <div id="Layer2" style="position:absolute; left:-35px; top:200px; width:1700px; height:508px; z-index:2">
+      <div id="Layer1" style="position:absolute; left:480px; top:20px; z-index:2">
+        <h1> LE CHOIXPEAU MAGIQUE</h1>
+      </div>
+
+      <div id="Layer1" style="position:absolute; left:-50px; top:-20px; width:136px; height:132px; z-index:0">
+        <img src="window.png" width="1430" height="650" />
+      </div>
+
+      <div id="Layer1" style="position:absolute; left:-50px; top:620px; width:136px; height:132px; z-index:0">
+        <img src="wood.jpg" width="1430" height="210" />
+      </div>
+
+      <div id="Layer1" style="position:absolute; left:-10px; top:10px; width:136px; height:132px; z-index:1">
+        <img src="blason.png" width="100" height="90.5" />
+      </div>
+
+      <div id="Layer2" style="position:absolute; left:-35px; top:290px; width:1390px; height:508px; z-index:1">
         <marquee behavior="alternate" direction="right" scrollamount="2">
-            <img src="choixpeau.png" width="400" height="341" />
+            <img src="choixpeau.png" width="350" height="341" />
         </marquee>
       </div>
 
-      <div id="Layer3" style="position:absolute; left:600px; top:500px; width:136px; height:132px; z-index:3">
+      <div id="Layer3" style="position:absolute; left:500px; top:430px; width:136px; height:132px; z-index:2">
         <img src="sheet.png" width="400" height="341" />
       </div>
 
-      <div id="Layer4" style="position:absolute; left:730px; top:530px; width:150px; height:132px; z-index:4">
+      <div id="Layer4" style="position:absolute; left:630px; top:480px; width:150px; height:132px; z-index:3">
       <p id="question">Es-tu serpentard ?</p>
       </div>
 
-      <div id="Layer5" style="position:absolute; left:710px; top:590px; width:150px; height:132px; z-index:4">
+      <div id="Layer5" style="position:absolute; left:610px; top:540px; width:150px; height:132px; z-index:3">
        <button class="bouton" type="button" id="bouton1">1</button>
       </div>
 
-      <div id="Layer6" style="position:absolute; left:710px; top:650px; width:150px; height:132px; z-index:4">
+      <div id="Layer6" style="position:absolute; left:610px; top:590px; width:150px; height:132px; z-index:3">
        <button class="bouton" type="button"id="bouton2">2</button>
       </div>
 
-      <div id="Layer7" style="position:absolute; left:710px; top:710px; width:150px; height:132px; z-index:4">
+      <div id="Layer7" style="position:absolute; left:610px; top:640px; width:150px; height:132px; z-index:3">
         <button class="bouton" type="button"id="bouton3">3</button>
       </div>
 
-      <div id="Layer8" style="position:absolute; left:800px; top:700px; width:150px; height:132px; z-index:5">
+      <div id="Layer8" style="position:absolute; left:800px; top:700px; width:150px; height:132px; z-index:3">
         <p id="pp"></p>
       </div>
 
